gzip-1.8/conftest.err
conftest.c: In function 'main':
conftest.c:79:20: error: expected expression before ')' token
 if (sizeof ((pid_t)))
                    ^
